# job_hunter

./: Readme.txt  backend_kathmandu.csv  backend_kathmandu_1.csv  backend_toronto_1.csv  basic.py  flutter_kathmandu.csv  jobs.csv  jobs_backend_kathmandu.csv  jobs_kathmandu.csv  pyproject.toml
data/: jobs_0.csv  jobs_1.csv
jobspy/: model.py
