[project]
name = "job_hunter"
version = "0.1.0"
description = ""
authors = [
    {name = "Milan Shrestha",email = "milan.shrestha@spiralogics.com"}
]
readme = "README.md"
requires-python = "<4.0,>=3.11"
dependencies = [
    "jobsparser (>=0.1.7,<0.2.0)",
    "jobspy (>=0.29.0,<0.30.0)",
    "python-jobspy (>=1.1.79,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
package-mode = false
